# Genllm

./: .gitignore  CMakeLists.txt  README.md  build.py  qwe3.drawio  qwen3_graph.dot  test_backend_split  test_backend_split.cpp
cmake/: Genllm.cmake.in
docs/: add_new_operator.md  doc1.drawio  execution_flow.md  operator_dispatch.md  qwen3-graph.dot  qwen3.drawio  qwen35-graph.dot  series_plan.md
include/3rd/: json.hpp
include/backend/: backend.h
include/backend/cpu/: activation.h  arithmetic.h  attention.h  embedding.h  linear.h  memcpy.h  normalization.h  register.h  rope.h  sampling.h  shape.h  silu.h
include/backend/cuda/: activation.cuh  activation.h  arithmetic.cuh  arithmetic.h  attention.cuh  attention.h  embedding.cuh  embedding.h  linear.cuh  linear.h  memcpy.h  normalization.cuh  normalization.h  register.h  rope.cuh  rope.h  sampling.cuh  sampling.h  shape.cuh  shape.h  silu.h
include/core/: backend.h  context.hpp  executor.h  gguf_parser.h  graph.h  graph.hpp  kernels.h  manager.h  manager.hpp  memory.hpp  memory_manager.h  mmanger.h  operator.h  page_attention.h  pools.h  resource.h  scheduler.h  tensor.hpp  thread_pool.h  tokenizer.h
include/model/: Qwen3.hpp  Qwen35.hpp  model.h  op_factory.hpp
include/utils/: bfloat16.hpp  dtype_traits.hpp  float16.hpp  tools.hpp  utils.hpp
shader/add/: add_bf16.comp  add_f16.comp  add_f32.comp
shader/div/: div_bf16.comp  div_f16.comp  div_f32.comp
shader/gelu/: gelu_bf16.comp  gelu_f16.comp  gelu_f32.comp
shader/mul/: mul_bf16.comp  mul_f16.comp  mul_f32.comp
shader/relu/: relu_bf16.comp  relu_f16.comp  relu_f32.comp
shader/silu/: silu_bf16.comp  silu_f16.comp  silu_f32.comp
shader/sub/: sub_bf16.comp  sub_f16.comp  sub_f32.comp
shell/: model.py  test_gguf.py  test_hf.py
src/: main.cpp
src/backend/: backend_cpu.cpp  backend_cuda.cpp  backend_manager.cpp  backend_sycl.cpp  backend_vk.cpp  backend_vulkan.cpp
src/backend/cpu/: activation.cpp  arithmetic.cpp  attention.cpp  embedding.cpp  linear.cpp  rope.cpp  (+5 more)
src/core/: context.cpp  executor.cpp  gguf_parser.cpp  graph.cpp  kernels.cpp  manager.cpp  memory.cpp  mmanger.cpp  page_attention.cpp  pools.cpp  resource_cpu.cpp  resource_cuda.cpp  resource_vulkan.cpp  scheduler.cpp  thread_pool.cpp  tokenizer.cpp
src/model/: Qwen3.cpp  Qwen35.cpp  model.cpp
tests/: benchmark.cpp  debug.py  dump_meta.cpp  genllm-cli.cpp  gguf.py  main.cpp  model.py  models  ops.py  read_gguf.cpp  test_tokenizer.cpp
(+20 files in other folders)
